20070411 TAG: libspectrum_0_3_0 (libspectrum_0_3_0-branch)
20070425 tap.c,tzx_read.c: call libspectrum_tape_clear() on error rather than
	 libspectrum_tape_free() to avoid double free bug (fixes bugs #1479451
	 and #1706994; thanks, crabfists) (libspectrum_0_3_0-branch).
20070509 libspectrum.in: add WIN32_DLL to Generalised Data Block functions
	 (part of patch 1711412) (libspectrum_0_3_0-branch) (Stuart Brady).
20070509 Makefile.am,configure.in,hacking/{.cvsignore,Makefile.am}: distribute
	 the hacking/ subdir (thanks, Stuart Brady) (libspectrum_0_3_0-branch).
20070509 acinclude.m4: fix underquoted macro (thanks, Stuart Brady)
	 (libspectrum_0_3_0-branch).
20070510 ChangeLog,Makefile.am,README,configure.in,doc/{libspectrum.3,
	 libspectrum.txt}: updates for 0.3.0.1 release
	 (libspectrum_0_3_0-branch).
20070511 TAG: libspectrum_0_3_0_1 (libspectrum_0_3_0-branch)
20070512 doc/cvs-tags: document merge back to trunk (libspectrum_0_3_0-branch)
20070512 Merge changes from libspectrum_0_3_0-branch to HEAD.
20070512 TAG: libspectrum_0_3_0-merge-1
20070513 make-perl.c,tap.c,tape_accessors.pl: Fix filenames in comments
         (patch #1716201) (Stuart Brady).
20070513 Makefile.am,configure.in,test/{.cvsignore,Makefile.am,invalid.tzx,
	 test.c}: add first automated test for bugs #1479451 and #1706994
	 (Philip Kendall).
20070516 tape.c,tzx_read.c,test/{test.c,turbo-zeropilot.tzx}: don't produce
	 a pilot if none present in TZX turbo block, and free a TZX turbo
	 block with no data correctly (fixes bugs #1720238 and #1720270).
20070518 tzx_write.c: add write support for TZX direct recording block (Fred).
20070518 Makefile.am,configure.in,doc/Makefile.am,hacking/Makefile.am,
         myglib/{.cvsignore,Makefile.am},test/{.cvsignore,Makefile.am}:
         make sure libspectrum is built before test by switching to a 
         non-recursive make with full dependency graph (Fred).
20070520 test/test.c: fix warnings in test build (Fred).
20070520 Remove .cvsignore files.
