@@ -110,8 +110,8 @@ tzx_read_string( const libspectrum_byte **ptr, const libspectrum_byte *end,
 /* The main load function */
 
 libspectrum_error
-libspectrum_tzx_read( libspectrum_tape *tape, const libspectrum_byte *buffer,
-		      const size_t length )
+internal_tzx_read( libspectrum_tape *tape, const libspectrum_byte *buffer,
+		   const size_t length )
 {
 
   libspectrum_error error;
@@ -251,6 +251,13 @@ libspectrum_tzx_read( libspectrum_tape *tape, const libspectrum_byte *buffer,
   }
 
   return LIBSPECTRUM_ERROR_NONE;
+}
+
+libspectrum_error
+libspectrum_tzx_read( libspectrum_tape *tape, const libspectrum_byte *buffer,
+		      const size_t length )
+{
+  return internal_tzx_read( tape, buffer, length );
 }
 
 static libspectrum_error
